# haze

./: .env  docker-compose.dev.yml  docker_manager.sh
backend/: .env  Cargo.toml  Dockerfile  entrypoint.sh
backend/migrations/: 001_create_messages.sql  001_create_users.sql
backend/src/: db.rs  main.rs
backend/src/controller/: user.rs
backend/src/controllers/: chat.rs  user.rs
backend/src/libs/: qrcode.rs
backend/src/model/: user.rs
backend/src/models/: user.rs  users.rs
backend/src/operations/: mod.rs
backend/src/operations/data/: dt.rs  mod.rs
backend/src/operations/database/: db.rs  usage.rs
backend/src/operations/schema/: mod.rs  sc.rs  usage.rs
backend/src/operations/table/: mod.rs  tb.rs  usage.txt
backend/src/routes/: index.rs
backend/src/websockets/: websocket.rs
frontend/: Dockerfile  package.json
frontend/src/: App.js
frontend/src/api/: websocket.js
frontend/src/components/: Chat.jsx
migrations/: 001_create_users.sql
