[package]
name = "chat-backend"
version = "0.1.0"
edition = "2021"

# Optional: Add authors and description
description = "A Rust backend with PostgreSQL using Actix-Web and SQLx"
authors = ["Your Name <you@example.com>"]

# Define the entry point
[dependencies]
actix-web = "4.0"
actix-web-actors = "4.0" # Optional, only needed if you use WebSockets
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
chrono = "0.4"

[features]
default = ["sqlx/postgres", "sqlx/runtime-tokio-native-tls"]
